--- a/Login.html
+++ b/Login.html
@@ -2,7 +2,7 @@
 
   <head>
     <title>Welcome To Login Form 19 4 36</title>
-
+<script type="text/javascript" src="./js/scripts.js"></script>
   </head>
 
   <body>
@@ -37,31 +37,26 @@
 
 
           <h2 align="center">Welcome To Login Page</h2>
-          <div>
-            <table cellspacing="2" align="center" cellpadding="8" border="0">
-              <tr>
-                <td>Enter User Name :</td>
-                <td><input type="text" placeholder="User Name" id="usermail" /></td>
-              </tr>
-              <tr>
-                <td>Enter Password :</td>
-                <td><input type="password" placeholder="Password" id="pwd" /></td>
-              </tr>
-              <tr>
-                <td></td>
-                <td>
-                  <input type="submit" value="Reset" />
-                  <input type="submit" value="Login" onclick=login() /></td>
-              </tr>
-            </table>
+          <div class="LoginBox">
+            <div class="LoginBoxButton">
+                  <tr>
+                    <input type="submit" value="Login as User bsons_Stage@gmail.com" onclick="loginB();" /></td>
+                  </tr>
+            </div>
+            <div class="LoginBoxButton">
+                  <tr>
+                    <input type="submit" value="Login as User kevinly618_Stage@gmail.com" onclick="loginA();" /></td>
+                  </tr>
+            </div>
           </div>
+
 
 
       </div>
       <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-          <script type="text/javascript" src="./js/scripts.js"></script>
+
       <script>
       $(function(){
         $("#nav-placeholder").load("nav.html");
