Load in font awesome

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Home Page</title>
     <link rel="stylesheet" href="css/style.css">
     <script type="text/javascript" src="./js/scripts.js"></script>
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 </head>
 
 <body>
